Add demo page, update config

--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
-  "name": "Node.js Getting Started",
-  "description": "A barebones Node.js app for HackOverflow workshop",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
+  "name": "HackOverflow Getting Started",
+  "description": "A barebones Node.js app for the HackOverflow workshop",
+  "repository": "https://github.com/swestwood/hackoverflow-workshop",
   "keywords": ["node", "express", "static"],
   "image": "heroku/nodejs"
 }
