--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "nunjucks": "^2.4.2"
   },
   "engines": {
     "node": "4.1.1"
